@@ -8,6 +8,7 @@ WinMerge 2.7.7.6
    two or more EOL styles (#1901547)
   Indent "Explorer Context Menu" sub options (#1901763)
   Replace 'DOS' in EOL style strings with 'Windows' (#1902583)
+  Show 'Mixed' as file compare EOL style instead of empty style (r5091)
   BugFix: Ignore codepage specified on File Encoding dialog if file was 
     detected as UTF-8 (#1900728)
   BugFix: Recognize invalid UTF-8 sequence as UTF-8 (#1900733)
